src/objects/Needle_Exchange__c.object
<CustomObject>
    <fields>
        <fullName>X5ml_Syringe_Dispensed__c</fullName>
        <label>5ml Syringe Dispensed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5ml_Syringe_Requested_N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>5ml Syringe Requested N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5ml_Syringe_Returned__c</fullName>
        <label>5ml Syringe Returned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NSP Intervention</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Total_Needles_Dispensed__c</columns>
        <columns>Total_Needles_Returned__c</columns>
        <columns>Total_Syringes_Dispensed__c</columns>
        <columns>Total_Syringes_Returned__c</columns>
        <columns>Client__c</columns>
        <filterScope>Everything</filterScope>
        <label>All NSP Interventions</label>
    </listViews>
    <listViews>
        <fullName>Allthisweek</fullName>
        <columns>NAME</columns>
        <columns>Total_Needles_Dispensed__c</columns>
        <columns>Total_Needles_Returned__c</columns>
        <columns>Total_Syringes_Dispensed__c</columns>
        <columns>Total_Syringes_Returned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>NSP This Week</label>
    </listViews>
    <listViews>
        <fullName>NSP_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Total_Needles_Dispensed__c</columns>
        <columns>Total_Needles_Returned__c</columns>
        <columns>Total_Syringes_Dispensed__c</columns>
        <columns>Total_Syringes_Returned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>NSP This Month</label>
    </listViews>
    <nameField>
        <displayFormat>NSE-{000}-{MM}{YY}</displayFormat>
        <label>NSP Intervention</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSP Interventions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>